--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,11 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile "org.testfx:testfx-core:4.0.15-alpha"
     testCompile "org.testfx:testfx-junit:4.0.15-alpha"
+    compile 'org.json:json:20180813','org.slf4j:slf4j-simple:1.7.25'
+
+    testCompile (
+            'junit:junit:4.11',
+            "org.mockito:mockito-core:2.+"
+    )
+    testRuntime('junit:junit:4.11')
 }
