--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 plugins {
     id 'java'
     id 'application'
+    id "com.diffplug.gradle.spotless" version "3.15.0"
 }
+
+// Apply the java-library plugin to add support for Java Library
+apply plugin: 'java-library'
+apply plugin: 'java'
 
 group 'ca.uvic.seng330.assn3'
 version '1.0-SNAPSHOT'
@@ -9,12 +14,31 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
+	jcenter()
     mavenCentral()
 }
 
 mainClassName = "ca.uvic.seng330.assn3.MVCtesting.Client"
 
+spotless {
+  java {
+    googleJavaFormat()
+  }
+}
+
+test {
+    testLogging {
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+    }
+}
+
 dependencies {
+	    // This dependency is exported to consumers, that is to say found on their compile classpath.
+    api 'org.apache.commons:commons-math3:3.6.1'
+
+    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
+    implementation 'com.google.guava:guava:23.0'
+    
 	compile 'org.json:json:20180813','org.slf4j:slf4j-simple:1.7.25'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile "org.testfx:testfx-core:4.0.15-alpha"
