UItests infrastructure setup

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,14 @@ repositories {
     mavenCentral()
 }
 
-mainClassName = "ca.uvic.seng330.assn3.MVCtesting.Client"
+mainClassName = "ca.uvic.seng330.assn3.Client"
+
+test {
+  filter {
+    includeTestsMatching "ca.uvic.seng330.assn3.UIAcceptanceTests"
+    // includeTestsMatching ""
+   }
+}
 
 dependencies {
 	compile 'org.json:json:20180813','org.slf4j:slf4j-simple:1.7.25'
