--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ mainClassName = "ca.uvic.seng330.assn3.Client"
 
 test {
   filter {
-    includeTestsMatching "ca.uvic.seng330.assn3.UIAcceptanceTests"
+    //includeTestsMatching "ca.uvic.seng330.assn3.UIAcceptanceTests"
     // includeTestsMatching ""
    }
 }
