--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ spotless {
 
 test {
     testLogging {
-        events "passed", "skipped", "failed", "standardOut", "standardError"
+        events "passed", "skipped", "failed", "standardError"
     }
 }
 
