--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ mainClassName = "ca.uvic.seng330.assn3.Client"
 
 test {
   filter {
-    //includeTestsMatching "ca.uvic.seng330.assn3.UIAcceptanceTests"
-    // includeTestsMatching ""
+    includeTestsMatching "ca.uvic.seng330.assn3.UIAcceptanceTests"
+    //includeTestsMatching ""
    }
 }
 
